syntax = "proto3";

service Worker {
    rpc MapOperation (MapInfo) returns (MapInfoResult);
    rpc ReduceOperation (ReduceInfo) returns (MapInfoResult);
}

message MapInfoResult {
    string uuid = 1;
    bool result = 2;
}

message MapInfo {
  string filename = 1;
  string block = 2;
}

message ReduceInfo {
    string ip = 1;
    string filename = 2;
}
